added migration scripts and updated booking controllers to use correct models in querying e.g customers, therapists
