# routes/bookings.ts
@@ -2,6 +2,7 @@ import express from "express";
 import auth from "../middleware/auth.js";
 import therapist from "../middleware/therapist.js";
 import validateObjectId from "../middleware/validateObjectId.js";
+import admin from "../middleware/admin.js";
 import {
   createBooking,
   getBookings,
@@ -9,6 +10,7 @@ import {
   deleteBooking,
   getBookingForUpdate,
   updateBookingStatus,
+  getTodaysBookings,
 } from "../controllers/booking.controller.js";
 
 const router = express.Router();
@@ -18,6 +20,7 @@ router.get("/", [auth], getBookings);
 router.put("/:id", [auth, validateObjectId], updateBooking);
 router.put("/delete/:id", [auth, validateObjectId], deleteBooking);
 router.get("/update-view/:id", [auth, validateObjectId], getBookingForUpdate);
+router.get("/today", [auth, admin], getTodaysBookings);
 router.put(
   "/update-status/:id",
   [auth, therapist, validateObjectId],
